--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/pwa": "^0.12.4",
     "@angular/router": "~7.2.0",
+    "@angular/service-worker": "~7.2.0",
     "ag-grid-angular": "^22.1.1",
     "ag-grid-community": "^22.1.1",
+    "ag-grid-enterprise": "^22.1.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "jquery": "^3.4.1",
